# neurips_scraper

./: Dockerfile  fly.toml  railway.toml  requirements.txt
docs/: index.html  visualize.html
paper-scraper/: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
paper-scraper/docs/: BUG_FIXES.md  FRONTEND_IMPROVEMENTS.md  IMPROVEMENTS.md  OPTIMIZATIONS.md  PROJECT_TIMELINE.md  SCRAPER_ARCHITECTURE.md  SECOND_REVIEW_FIXES.md  VISUALIZATION_FEATURES.md
paper-scraper/src/: __init__.py
paper-scraper/src/api/: __init__.py  main.py
paper-scraper/src/frontend/: index.html  visualize.html
paper-scraper/src/scrapers/: __init__.py  acl_scraper.py  neurips_scraper.py  openreview_scraper.py
paper-scraper/tests/: test_normalization.py  test_scraper.py
