[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-scraper"
version = "0.1.0"
description = "Academic paper scraper and explorer for AI/ML conferences"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hojicha Research"},
]
keywords = ["scraper", "papers", "conference", "academic", "research"]

dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://neurips.aipapertrails.com"
Repository = "https://github.com/hojicha-research/paper-scraper"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

